Criação de website para gerenciar.

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -1,17 +1,5 @@
-<!-- <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="ISO-8859-1">
-<title>Autotrac Launcher Manager</title>
-</head>
-<body>
-	<span th:text="'Mensagem do servidor: ' + ${mensagem}"></span>
-<p> Gerenciador Launcher</p>
-</body>
-</html> -->
-
 <!DOCTYPE html>
-<html lang="pt-BR" dir="ltr" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-BR" dir="ltr">
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
@@ -23,8 +11,8 @@
 		<img src="https://www.autotrac.com.br//wp-content/uploads/2017/09/supervisor-mobile-app.png" class="usuario" width="95" height="95" alt="">
 		<h1>Login</h1>
 		<form>		
-			<p>Usuário</p>
-			<input type="text" name="" placeholder="Insira seu nome de usuário">
+			<p>UsuÃ¡rio</p>
+			<input type="text" name="" placeholder="Insira seu nome de usuÃ¡rio">
 			<p>Senha</p>
 			<input type="password" name="" placeholder="Insira sua senha">
 			<input type="submit" name="" value="Login">
