--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
 <html lang="pt-BR" dir="ltr">
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Calibri" rel="stylesheet">
+	<meta charset="ISO-8859-1">
 	<title>Gerenciador Remoto Autotrac Launcher</title>
 </head>
 <body>
